Commit Adiciona QRCODE

--- a/app/src/main/res/layout/activity_cadastrar_utilizacao.xml
+++ b/app/src/main/res/layout/activity_cadastrar_utilizacao.xml
@@ -99,6 +99,13 @@
         android:onClick="registraUtilizacao"
         android:text="@string/btn_enviar" />
 
+    <Button
+        android:id="@+id/btnBuscar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="escanearQR"
+        android:text="@string/btn_buscar" />
+
     <ListView
         android:id="@+id/listViewHistorico"
         android:layout_width="match_parent"
